--- a/en/docs/assets/css/theme.css
+++ b/en/docs/assets/css/theme.css
@@ -62,15 +62,26 @@
     text-align: left;
 }
 
-[data-md-color-primary=deep-orange] .md-header {
+[data-md-color-primary=#ff7043] .md-header {
     background-color: #ffffff;
     color: #212121;
     border-top: 4px solid #ff7043;
 }
 
+.md-header {
+    background-color: #fff;
+    color: #000;
+    border-top: 4px solid #808818;
+}
+
 .md-header-nav__button.md-logo>img {
     width: 60px;
     margin-top: 3px;
+}
+
+.md-tabs {
+    background-color: #f5f5f5;
+    box-shadow: none;
 }
 
 .md-header__version-select {
@@ -122,7 +133,7 @@ svg.DocSearch-Search-Icon {
 }
 
 @media only screen and (min-width: 76.25em) {
-    [data-md-color-primary=deep-orange] .md-tabs {
+    [data-md-color-primary=#808818] .md-tabs {
         background-color: #f5f5f5;
         box-shadow: none;
     }
@@ -133,12 +144,12 @@ svg.DocSearch-Search-Icon {
 }
 
 html .md-typeset .superfences-tabs>label {
-    color: #ff7043;
+    color: #808818;
     font-weight: normal;
 }
 
 html .md-typeset .superfences-tabs>label:hover {
-    color: #ff7043;
+    color: #808818;
     font-weight: bold;
 }
 
@@ -181,9 +192,9 @@ html .md-typeset .superfences-tabs>label:hover {
     transform: rotateX(180deg)
 }
 
-[data-md-color-primary=deep-orange] .md-nav-link-wrapper a:focus,
-[data-md-color-primary=deep-orange] .md-nav-link-wrapper a:hover {
-    color: #ff7043;
+[data-md-color-primary=#808818] .md-nav-link-wrapper a:focus,
+[data-md-color-primary=#808818] .md-nav-link-wrapper a:hover {
+    color: #808818;
 }
 
 .md-version-select {
@@ -386,8 +397,8 @@ html .md-typeset .superfences-tabs>label:hover {
     color: rgba(0, 0, 0, .54);
 }
 
-[data-md-color-accent=deep-orange] .mb-config-catalog .mb-config-example:hover .md-clipboard:active:before,
-[data-md-color-accent=deep-orange] .mb-config-catalog .mb-config-example:hover .md-clipboard:hover:before {
+[data-md-color-accent=#808818] .mb-config-catalog .mb-config-example:hover .md-clipboard:active:before,
+[data-md-color-accent=#808818] .mb-config-catalog .mb-config-example:hover .md-clipboard:hover:before {
     color: #ff6e40;
 }
 
@@ -412,7 +423,7 @@ html .md-typeset .superfences-tabs>label:hover {
     margin: 0 .29412em;
     padding: .07353em .3em;
     border-radius: .2rem;
-    background-color: #ff7043;
+    background-color: #808818;
     color: #fff;
     font-size: 75%;
 }
@@ -438,7 +449,7 @@ html .md-typeset .superfences-tabs>label:hover {
 .mb-config-catalog .mb-config .param>.param-name {
     display: table-cell;
     vertical-align: top;
-    border-left: 2px solid #ff7043;
+    border-left: 2px solid #808818;
     box-sizing: border-box;
     position: relative;
     padding: 1.7em 0;
@@ -460,7 +471,7 @@ html .md-typeset .superfences-tabs>label:hover {
     display: inline-block;
     width: 2px;
     height: 8px;
-    background-color: #ff7043;
+    background-color: #808818;
     margin: -4px 10px 0;
     vertical-align: middle;
 }
@@ -468,7 +479,7 @@ html .md-typeset .superfences-tabs>label:hover {
 .mb-config-catalog .mb-config .param>.param-name>span::after {
     content: '';
     position: absolute;
-    border-top: 2px solid #ff7043;
+    border-top: 2px solid #808818;
     width: 10px;
     left: 0;
     top: 2.3em;
@@ -553,7 +564,7 @@ html .md-typeset .superfences-tabs>label:hover {
 
 .hljs-title,
 .hljs-section {
-    color: #ff7043;
+    color: #808818;
     font-weight: normal;
 }
 
@@ -565,7 +576,7 @@ html .md-typeset .superfences-tabs>label:hover {
 .hljs-quote,
 .hljs-template-tag,
 .hljs-deletion {
-    color: #ff7043;
+    color: #808818;
 }
 
 .home_icon {
@@ -683,15 +694,15 @@ html .md-typeset .superfences-tabs>label:hover {
         line-height: .9rem;
         white-space: unset;
         background-color: rgba(0, 0, 0, .01);
-        border-top: 3px solid #ff7043;
+        border-top: 3px solid #808818;
         box-shadow: 0 0 0.2rem rgba(0, 0, 0, .1), 0 0.2rem 0.4rem rgba(0, 0, 0, .2);
     }
 }
 
 @media only screen and (max-width: 76.1875em) {
-    html [data-md-color-primary=deep-orange] .md-nav--primary .md-nav__title--site {
+    html [data-md-color-primary=#808818] .md-nav--primary .md-nav__title--site {
         background-color: #fff;
-        border-top: 3px solid #ff7043;
+        border-top: 3px solid #808818;
         box-shadow: 0 0 0.2rem rgba(0, 0, 0, .1), 0 0.2rem 0.4rem rgba(0, 0, 0, .2);
         color: #212121;
     }
@@ -832,7 +843,7 @@ html .md-footer-meta.md-typeset a,
 .md-tabs .md-tabs__link.md-tabs__link--active,
 .md-tabs .md-tabs__link.md-tabs__link:hover {
     opacity: 1 !important;
-    color: #ff7043;
+    color: #808818;
 }
 
 .md-tabs {
@@ -1106,7 +1117,7 @@ html .md-footer-meta.md-typeset a,
 .md-search-loader {
     border: 2px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 2px solid #3498db;
+    border-top: 2px solid #808818;
     width: 25px;
     height: 25px;
     -webkit-animation: xspin 2s linear infinite;
@@ -1145,7 +1156,7 @@ html .md-footer-meta.md-typeset a,
 
 /* For Algolia */
 :root {
-    --docsearch-primary-color: #ff7300 !important;
+    --docsearch-primary-color: #808818 !important;
 }
 
 .DocSearch-Hit-title {
@@ -1165,7 +1176,7 @@ html .md-footer-meta.md-typeset a,
 
 /* Highlighted text */
 .algolia-autocomplete .algolia-docsearch-suggestion--highlight {
-    color: #f47b20 !important;
+    color: #808818 !important;
     background-color: #ffaa001f !important
 }
 
@@ -1502,7 +1513,7 @@ html .md-footer-meta.md-typeset a,
 /* Home page specific styles */
 .homePage h2 {
     font-size: 1.2rem;
-    color: #F47B20;
+    color: #808818;
     border-bottom: 0;
     margin-top: -5px;
 }
@@ -1515,7 +1526,7 @@ html .md-footer-meta.md-typeset a,
 }
 
 .homePage h4 {
-    color: #F47B20;
+    color: #808818;
     margin: 0;
 }
 
@@ -1548,7 +1559,7 @@ html .md-footer-meta.md-typeset a,
     left: 0;
     right: 100%;
     bottom: 0;
-    background: #2098D1;
+    background: #808818;
     height: 4px;
     -webkit-transition-property: right;
     transition-property: right;
@@ -1582,8 +1593,16 @@ html .md-footer-meta.md-typeset a,
     padding: 20px 0 10px 0;
 }
 
-[data-md-color-primary=deep-orange] .md-typeset a {
-    color: #3f51b5;
+[data-md-color-primary=#808818] .md-typeset a {
+    color: #808818;
+}
+
+.md-typeset a:focus {
+    color: #808818;
+}
+
+.md-nav__link--active {
+    color: #808818;
 }
 
 .homePage ul {
@@ -1593,7 +1612,7 @@ html .md-footer-meta.md-typeset a,
 .section03 .linkSet2:hover a {
     text-decoration: underline;
     text-decoration-style: wavy;
-    text-decoration-color: #3f51b5;
+    text-decoration-color: #808818;
     animation: wavy-slide 3s linear infinite;
 }
 
