--- a/en/docs/assets/css/theme.css
+++ b/en/docs/assets/css/theme.css
@@ -188,6 +188,22 @@ p {
 .md-footer-nav__direction {
     font-size: 0.50rem;
 }
+.footer-copyright {
+    display: flex;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.footer-copyright-left {
+    flex: 1;
+    font-size: 0.60rem;
+}
+.footer-copyright-right {
+    font-size: 0.60rem;
+}
+
+.footer-copyright-top {
+    padding-bottom: 10px;
+}
 
 /* Left menu styles */
 
@@ -216,5 +232,12 @@ p {
         top: 49px;
         z-index: 100;
         right: 0;
+    }
+    .footer-copyright {
+        flex-direction: column;
+        padding-left: 10px;
+    }
+    .footer-copyright-right {
+        padding-top: 10px;
     }
 }
