--- a/en/theme/material/templates/redoc.html
+++ b/en/theme/material/templates/redoc.html
@@ -69,7 +69,7 @@
 
      .menu-content{
       top: 5.9rem !important;
-      height: calc(100vh - 5.9rem);
+      height: calc(100vh - 5.9rem) !important;
     }
 
      .md-nav{
