--- a/en/theme/material/templates/redoc.html
+++ b/en/theme/material/templates/redoc.html
@@ -24,6 +24,7 @@
     .md-content {
       margin-left: 0;
       margin-right: 0;
+      margin-top: 0;
     }
 
     .md-main__inner {
@@ -69,7 +70,7 @@
 
      .menu-content{
       top: 5.9rem !important;
-      height: calc(100vh - 5.9rem) !important;
+      height: calc(100vh - 6.9rem) !important;
     }
 
      .md-nav{
