--- a/en/theme/material/templates/redoc.html
+++ b/en/theme/material/templates/redoc.html
@@ -24,7 +24,7 @@
     .md-content {
       margin-left: 0;
       margin-right: 0;
-      margin-top: 0;
+      margin-top: 0 !important;
     }
 
     .md-main__inner {
