--- a/en/theme/material/templates/redoc.html
+++ b/en/theme/material/templates/redoc.html
@@ -19,29 +19,29 @@
 {% extends "base.html" %}
 
 {% block styles %}
-  {{ super() }}
-  <link rel="stylesheet" href="{{ 'assets/css/redoc.css' | url }}">
+{{ super() }}
+<link rel="stylesheet" href="{{ 'assets/css/redoc.css' | url }}">
 {% endblock %}
-{% block site_nav %}{% endblock %}
-<div class="redoc-swagger">
-{% block container %}
-<div class="md-content" data-md-component="content">
-  {{ page.content }}
-  {% block source %}
-    {% if page and page.meta and page.meta.source %}
+{% block main_block %}
+<main class="md-main" data-md-component="main">
+  <div class="md-main__inner_redoc md-grid">
+    <div class="md-content" data-md-component="content">
+      {{ page.content }}
+      {% block source %}
+      {% if page and page.meta and page.meta.source %}
       <h2 id="__source">{{ lang.t("meta.source") }}</h2>
       {% set repo = config.repo_url %}
       {% if repo | last == "/" %}
-        {% set repo = repo[:-1] %}
+      {% set repo = repo[:-1] %}
       {% endif %}
       {% set path = page.meta.path | default([""]) %}
       {% set file = page.meta.source %}
-      <a href="{{ [repo, path, file] | join('/') }}" title="{{ file }}" 
-         class="md-source-file">
+      <a href="{{ [repo, path, file] | join('/') }}" title="{{ file }}" class="md-source-file">
         {{ file }}
       </a>
-    {% endif %}
-  {% endblock %}
-</div>
+      {% endif %}
+      {% endblock %}
+    </div>
+  </div>
+</main>
 {% endblock %}
-</div>
