--- a/en/docs/assets/css/config-catalog.css
+++ b/en/docs/assets/css/config-catalog.css
@@ -103,7 +103,7 @@
 
 [data-md-color-accent=deep-orange] .mb-config-catalog .mb-config-example:hover .md-clipboard:active:before,
 [data-md-color-accent=deep-orange] .mb-config-catalog .mb-config-example:hover .md-clipboard:hover:before {
-    color: var(--second);
+    color: var(--md-primary-fg-color--light);
 }
 
 .mb-config-catalog>section.title>.mb-config-options>h2 {
@@ -127,7 +127,7 @@
     margin: 0 .29412em;
     padding: .07353em .3em;
     border-radius: .2rem;
-    background-color: var(--second);
+    background-color: var(--md-primary-fg-color--light);
     color: #fff;
     font-size: 75%;
 }
@@ -153,7 +153,7 @@
 .mb-config-catalog .mb-config .param>.param-name {
     display: table-cell;
     vertical-align: top;
-    border-left: 2px solid var(--second);
+    border-left: 2px solid var(--md-primary-fg-color--light);
     box-sizing: border-box;
     position: relative;
     padding: 1.7em 0;
@@ -175,7 +175,7 @@
     display: inline-block;
     width: 2px;
     height: 8px;
-    background-color: var(--second);
+    background-color: var(--md-primary-fg-color--light);
     margin: -4px 10px 0;
     vertical-align: middle;
 }
@@ -183,7 +183,7 @@
 .mb-config-catalog .mb-config .param>.param-name>span::after {
     content: '';
     position: absolute;
-    border-top: 2px solid var(--second);
+    border-top: 2px solid var(--md-primary-fg-color--light);
     width: 10px;
     left: 0;
     top: 2.3em;
@@ -195,7 +195,7 @@
     position: absolute;
     left: -2px;
     top: 0;
-    border-left: 3px solid #fff;
+    border-left: 3px solid var(--md-default-bg-color);
     height: 34px;
 }
 
@@ -234,10 +234,10 @@
 }
 
 html .md-typeset .superfences-tabs>label {
-    color: var(--main);
+    color: var(--md-primary-fg-color);
     font-weight: normal;
     padding: 20px;
-    border-bottom: 0.05rem dashed var(--second);
+    border-bottom: 0.05rem dashed var(--md-primary-fg-color--light);
 }
 
 .md-typeset .superfences-tabs {
@@ -248,7 +248,7 @@ html .md-typeset .superfences-tabs>label {
     border: 0.05rem solid rgba(0,0,0,.07);
 }
 .md-typeset .superfences-tabs {
-    border: 0.05rem dashed var(--second);
+    border: 0.05rem dashed var(--md-primary-fg-color--light);
     border-radius: 5px;
 }
 
