--- a/en/docs/assets/css/apktheme.css
+++ b/en/docs/assets/css/apktheme.css
@@ -87,3 +87,22 @@
 .footer-copyright-right {
     font-size: 0.60rem;
 }
+/* Home page specific styles */
+.homePage h2 {
+    font-size: 1.2rem;
+    color: var(--main);
+    border-bottom: 0;
+    margin-top: -5px;
+}
+
+.homePage h3 {
+    font-size: 1rem;
+    color: #333;
+    border-bottom: 0;
+    font-weight: 600;
+}
+
+.homePage h4 {
+    color: var(--main);
+    margin: 0;
+}
