--- a/en/docs/assets/css/redoc.css
+++ b/en/docs/assets/css/redoc.css
@@ -2,3 +2,9 @@
     margin: 0;
     max-width: 100%;
   }
+.md-main__inner_redoc h1, .md-main__inner_redoc h2 {
+  padding-top: 80px;
+}
+.md-main__inner_redoc div.sc-jSFjdj {
+  padding-top: 100px;
+}
