--- a/en/docs/assets/css/redoc.css
+++ b/en/docs/assets/css/redoc.css
@@ -8,3 +8,7 @@
 .md-main__inner_redoc div.sc-jSFjdj {
   padding-top: 100px;
 }
+.redoc-wrap .menu-content {
+  top:125px !important;
+  padding-bottom: 20px;
+}
