--- a/en/docs/assets/css/blue-palette.css
+++ b/en/docs/assets/css/blue-palette.css
@@ -10,6 +10,7 @@
     --md-accent-bg-color: #fff;
     --md-accent-bg-color--light: #ffffffb3;
     --md-banner: url(../img/apk-blog-blue.png) no-repeat left top;
+    --md-hjs-color: #00f;
 }
 :root {
     --md-text-font: 'Source Sans Pro', sans-serif;
@@ -20,15 +21,17 @@
     --md-primary-fg-color-header: #193a5d;
     --md-primary-fg-color-header-text: #f5f6f7;
     --md-primary-fg-color-header-text-active: #259dc9;
+    --md-accent-fg-color: #3d8fca;
     --md-default-bg-color: #193a5d;
-    --md-typeset-a-color: #97e8dd;
+    --md-typeset-a-color: #75c9e7;
     --md-banner: url(../img/apk-blog-blue-dark.png) no-repeat left top;
+    --md-hjs-color: rgb(186, 186, 255);
 }
 /* colors for the light theme */
 [data-md-color-scheme="default"] {
     --md-primary-fg-color-header: #f5f6f7;
     --md-primary-fg-color-header-text: #1d1d1d;
-    --md-primary-fg-color-header-text-active: #1c5e6e;
+    --md-primary-fg-color-header-text-active: #094570;
     --md-default-bg-color: #ffffff;
     --md-typeset-a-color: var(--md-primary-fg-color);
 }
@@ -38,4 +41,7 @@
 }
 .md-tabs__link--active, .md-tabs__link:focus, .md-tabs__link:hover {
     color: var(--md-primary-fg-color-header-text-active);
+}
+.hljs-built_in, .hljs-keyword, .hljs-name, .hljs-selector-tag, .hljs-tag {
+    color: var( --md-hjs-color);
 }
