--- a/en/docs/assets/css/blue-palette-alt1.css
+++ b/en/docs/assets/css/blue-palette-alt1.css
@@ -1,6 +1,6 @@
 
 :root {
-    --md-primary-fg-color: #259dc9;
+    --md-primary-fg-color: #45578c;
     --md-primary-fg-color--light: #1bcdff;
     --md-primary-fg-color--dark: #147ecc;
     --md-primary-bg-color: #fff;
@@ -9,7 +9,7 @@
     --md-accent-fg-color--transparent: #0339821a;
     --md-accent-bg-color: #fff;
     --md-accent-bg-color--light: #ffffffb3;
-    --md-banner: url(../img/banner-for-blue-light.png) no-repeat left top;
+    --md-banner: url(../img/banner-for-blue-alt-light.png) no-repeat left top;
     --md-hjs-color: #00f;
 }
 :root {
@@ -18,13 +18,14 @@
 }
 /* colors for dark theme */
 [data-md-color-scheme="slate"] {
-    --md-primary-fg-color-header: #193a5d;
+    --md-primary-fg-color: #23272f;
+    --md-primary-fg-color-header: #23272f;
     --md-primary-fg-color-header-text: #f5f6f7;
     --md-primary-fg-color-header-text-active: #259dc9;
     --md-accent-fg-color: #3d8fca;
-    --md-default-bg-color: #193a5d;
+    --md-default-bg-color: #23272f;
     --md-typeset-a-color: #75c9e7;
-    --md-banner: url(../img/banner-for-blue-dark.png) no-repeat left top;
+    --md-banner: url(../img/banner-for-blue-alt-dark.png) no-repeat left top;
     --md-hjs-color: rgb(186, 186, 255);
 }
 /* colors for the light theme */
