--- a/en/docs/assets/css/apktheme.css
+++ b/en/docs/assets/css/apktheme.css
@@ -153,3 +153,11 @@ header>.md-grid {
         display: none;
     }
 }
+
+.beta-badge {
+    display: inline-block;
+    background: #ffd600;
+    font-size: 14px;
+    padding: 5px;
+    line-height: 1;
+}
