--- a/en/theme/material/partials/footer.html
+++ b/en/theme/material/partials/footer.html
@@ -1,4 +1,7 @@
-{% import "partials/language.html" as lang with context %}
+
+{#-
+This file was automatically generated - do not edit
+-#}
 <footer class="md-footer">
   {% if page.previous_page or page.next_page %}
   {% if page.meta and page.meta.hide %}
@@ -7,16 +10,15 @@
   <nav class="md-footer__inner md-grid" aria-label="{{ lang.t('footer') }}" {{ hidden }}>
     {% if page.previous_page %}
     {% set direction = lang.t("footer.previous") %}
-    <a href="{{ page.previous_page.url | url }}" class="md-footer__link md-footer__link--prev"
-       aria-label="{{ direction }}: {{ page.previous_page.title | e }}" rel="prev">
+    <a href="{{ page.previous_page.url | url }}" class="md-footer__link md-footer__link--prev" aria-label="{{ direction }}: {{ page.previous_page.title | e }}" rel="prev">
       <div class="md-footer__button md-icon">
         {% include ".icons/material/arrow-left.svg" %}
       </div>
       <div class="md-footer__title">
         <div class="md-ellipsis">
-          <span class="md-footer__direction">
-            {{ direction }}
-          </span>
+                <span class="md-footer__direction">
+                  {{ direction }}
+                </span>
           {{ page.previous_page.title }}
         </div>
       </div>
@@ -24,13 +26,12 @@
     {% endif %}
     {% if page.next_page %}
     {% set direction = lang.t("footer.next") %}
-    <a href="{{ page.next_page.url | url }}" class="md-footer__link md-footer__link--next"
-       aria-label="{{ direction }}: {{ page.next_page.title | e }}" rel="next">
+    <a href="{{ page.next_page.url | url }}" class="md-footer__link md-footer__link--next" aria-label="{{ direction }}: {{ page.next_page.title | e }}" rel="next">
       <div class="md-footer__title">
         <div class="md-ellipsis">
-          <span class="md-footer__direction">
-            {{ direction }}
-          </span>
+                <span class="md-footer__direction">
+                  {{ direction }}
+                </span>
           {{ page.next_page.title }}
         </div>
       </div>
