Add a code block to hide the dropdown

--- a/en/docs/assets/css/apktheme.css
+++ b/en/docs/assets/css/apktheme.css
@@ -267,3 +267,8 @@ header>.md-grid {
 }
 
 /* End of custom dropdown specific styles */
+
+/* The code block below hides the dropdown. Remove it after the next release. */
+.mb-tabs__dropdown{
+    display: none;
+}
