adding cond and win contest banner

--- a/en/theme/material/partials/header.html
+++ b/en/theme/material/partials/header.html
@@ -36,6 +36,12 @@
                 <div class="md-header__topic">
           <span class="md-ellipsis">
             {{ config.site_name | replace('WSO2', '') }}
+            <span class="beta-badge">
+                Win big! Enter the APK Code & Win contest. Find more details on our
+                <a href="https://wso2.com/api-platform-for-k8s/apk-code-win/" target="_blank" rel="noopener noreferrer" style="text-decoration: underline; color: blue;">
+                    website
+                </a>.
+            </span>
           </span>
                 </div>
                 <div class="md-header__topic" data-md-component="header-topic">
