--- a/en/theme/material/partials/header.html
+++ b/en/theme/material/partials/header.html
@@ -34,10 +34,10 @@
         <div class="md-header__title" data-md-component="header-title">
             <div class="md-header__ellipsis">
                 <div class="md-header__topic">
-          <span class="md-ellipsis">
+          <!-- <span class="md-ellipsis">
             {{ config.site_name | replace('WSO2', '') }}
             <span class="beta-badge">This documentation is a work in progress.</span>
-          </span>
+          </span> -->
                 </div>
                 <div class="md-header__topic" data-md-component="header-topic">
           <span class="md-ellipsis">
